--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "navbar",
+  "name": "navbar-k",
   "version": "1.0.0",
   "description": "This can create a responsive navbar",
   "main": "app.js",
