--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Kanon-Hosen/navBar.git"
   },
   "keywords": [
-    "navBar"
+    "navbar-k"
   ],
   "author": "Kanon Hosen",
   "license": "ISC",
